--- a/EFStories/EFStories.csproj
+++ b/EFStories/EFStories.csproj
@@ -158,6 +158,7 @@
     <Compile Include="Models\BackgroundUploader.cs" />
     <Compile Include="Models\Image.cs" />
     <Compile Include="Models\ImageUploadParamsExt.cs" />
+    <Compile Include="Models\Photo.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Properties\Settings.Designer.cs">
       <AutoGen>True</AutoGen>
@@ -170,6 +171,7 @@
     <Content Include="Content\bootstrap-theme.min.css" />
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
+    <Content Include="Content\cloudinary_cors.html" />
     <Content Include="favicon.ico" />
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
@@ -187,6 +189,15 @@
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
     </None>
     <None Include="Scripts\jquery-3.3.1.intellisense.js" />
+    <Content Include="Scripts\cloudinary\canvas-to-blob.min.js" />
+    <Content Include="Scripts\cloudinary\jquery.cloudinary.js" />
+    <Content Include="Scripts\cloudinary\jquery.fileupload-image.js" />
+    <Content Include="Scripts\cloudinary\jquery.fileupload-process.js" />
+    <Content Include="Scripts\cloudinary\jquery.fileupload-validate.js" />
+    <Content Include="Scripts\cloudinary\jquery.fileupload.js" />
+    <Content Include="Scripts\cloudinary\jquery.iframe-transport.js" />
+    <Content Include="Scripts\cloudinary\jquery.ui.widget.js" />
+    <Content Include="Scripts\cloudinary\load-image.all.min.js" />
     <Content Include="Scripts\jquery-3.3.1.js" />
     <Content Include="Scripts\jquery-3.3.1.min.js" />
     <Content Include="Scripts\jquery-3.3.1.slim.js" />
